# LiveApp

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/zw/liveapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CallbackUtil.cpp  CallbackUtil.h  QueueUtil.cpp  QueueUtil.h  RtmpPush.cpp  RtmpPush.h  log.h  native-lib.cpp
app/src/main/java/com/example/zw/liveapp/: CameraPreviewActivity.java  Img2VideoActivity.java  LivePushActivity.java  MainActivity.java  VideoActivity.java  YuvVideoActivity.java  img2VideoActivity.java
app/src/main/java/com/example/zw/liveapp/camera/: CameraFboRender.java  CameraRender.java  CameraView.java  MyCamera.java
app/src/main/java/com/example/zw/liveapp/egl/: EglHelper.java  MyEGLSurfaceView.java  ShaderUtil.java
app/src/main/java/com/example/zw/liveapp/encodec/: BaseMediaEncoder.java  EncoderRender.java  MyMediaEncoder.java
app/src/main/java/com/example/zw/liveapp/encoder/: BaseMediaEncoder.java  EncoderRender.java  MyMediaEncoder.java
app/src/main/java/com/example/zw/liveapp/img2video/: ImgFboRender.java  ImgVideoRender.java  ImgVideoView.java
app/src/main/java/com/example/zw/liveapp/push/: BasePushEncoder.java  PushConnectionListener.java  PushEncoder.java  PushEncoderRender.java  (+1 more)
app/src/main/res/layout/: activity_camera_preview.xml  activity_img2video.xml  activity_live_push.xml  activity_main.xml  activity_video.xml  activity_yuv_video.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/zw/liveapp/: ExampleUnitTest.java
(+4 files in other folders)
